# SimpleAgent

./: .env.example  Cargo.toml  LICENSE  PLAN.md  README.md  TODO.md  pyproject.toml
docs/: pi-agent-design.md  tmux-workflow.md
fixtures/context/: session-v1.ctx
src/: agent_config.rs  core.rs  llm.rs  main.rs  memory.rs  router.rs  runtime.rs  tool_view.rs  tools.rs
src/simple_agent/: __init__.py  agent.py  cli.py  events.py  llm.py  tools.py
